# lut

./: .gitignore  .gitmodules  .prettierignore  AGENTS.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  package-lock.json  package.json  playwright.config.ts  playwright.pages.config.ts  rust-toolchain.toml  tsconfig.app.json  tsconfig.test.json  vite.config.ts
.github/workflows/: verify.yml
.impeccable/critique/: 2026-07-15T18-09-39Z__web-src-app-tsx.md  2026-07-15T20-26-12Z__web-src-app-tsx.md  2026-07-15T20-54-39Z__web-src-app-tsx.md  2026-07-15T21-26-13Z__web-src-app-tsx.md  2026-07-15T21-50-44Z__web-src-app-tsx.md  2026-07-15T22-18-50Z__web-src-app-tsx.md  2026-07-15T22-54-05Z__web-src-app-tsx.md  2026-07-15T23-13-09Z__web-src-app-tsx.md  2026-07-15T23-45-11Z__web-src-app-tsx.md  2026-07-16T00-43-08Z__web-src-app-tsx.md  2026-07-16T03-37-02Z__web-src-app-tsx.md  2026-07-16T04-11-09Z__web-src-app-tsx.md  2026-07-16T06-38-04Z__web-src-app-tsx.md
assets/: luts.json
baselines/legacy-python-v1/: generate.py  linear-all-looks-ev0.npz  linear-classic-negative-ev0.npz  manifest.json  pyproject.toml
crates/alchemy-cli/: Cargo.toml
crates/alchemy-cli/src/: main.rs
crates/alchemy-cli/tests/: export.rs
crates/alchemy-core/: Cargo.toml
crates/alchemy-core/include/: alchemy.h
crates/alchemy-core/src/: c_api.rs  color.rs  cube.rs  error.rs  image.rs  lib.rs  pipeline.rs  tiff.rs  wasm.rs
crates/alchemy-libraw/: Cargo.toml  build.rs
crates/alchemy-libraw/examples/: decode_rgb16.rs
crates/alchemy-libraw/src/: aahd_capture.patch  aahd_math_override.h  browser_wrapper.cpp  lib.rs  wrapper.cpp
crates/lutify-cli/: Cargo.toml
crates/lutify-cli/src/: main.rs
crates/lutify-cli/tests/: export.rs
crates/lutify-core/: Cargo.toml
crates/lutify-libraw/: Cargo.toml  build.rs
crates/lutify-libraw/examples/: decode_rgb16.rs
crates/lutify-libraw/src/: aahd_math_override.h  browser_wrapper.cpp  lib.rs  parallel_for.h  postprocessing_utils.cpp  wrapper.cpp
docs/: README.md  design.md  polish-2026-07-18.md  spec.md
docs/local_dev/: ref.md
scripts/: benchmark-libraw-algorithms.mjs  benchmark-libraw-unpack.mjs  benchmark-studio-decode.py  bootstrap-gpu-ci.sh  build-libraw-wasm.sh  check-libraw-parity.mjs  check-libraw-sensor.mjs  check-onnx-demosaic-reference.py  check-preview-quality.mjs  check-production-bundle.mjs  check-wasm-boundaries.mjs  fetch-large-raw-fixture.mjs  generate-onnx-color-model.py  libraw-node-runtime.mjs  patch-libraw-pthreads.mjs  prepare-assets.mjs  prepare-webgpu-camera-fixtures.mjs  run-gpu-ci.sh
tests/: c-api-smoke.c
tests/fixtures/: README.md  aahd-tiled-reference.json  auto-exposure-reference.json  corrected-v2-reference.json  generate_auto_exposure_reference.py  generate_corrected_v2_reference.py  generate_studio_white_balance_reference.py  gopro-hero7.gpr  linear.dng  make_linear_dng.py  make_packed_dng.py  make_xtrans_dng.py  raw-manifest.json  studio-white-balance-reference.json  webgpu-camera-matrix.json
web/: index.html
web/e2e/: aahd-camera-matrix.spec.ts  aahd-export.spec.ts  aahd-tile.spec.ts  app.spec.ts  browser-smoke.spec.ts  demosaic-performance.spec.ts  dev-assets.spec.ts  failures.spec.ts  lut-preload.spec.ts  preview-cache.spec.ts  preview-interaction-performance.spec.ts  queue.spec.ts  raw-compat.spec.ts  raw-performance.spec.ts  runtime.spec.ts  tiff.ts  webgpu-preview-correctness.spec.ts  webgpu-preview.spec.ts  webgpu-production-export.spec.ts  xtrans-parity.spec.ts
web/pages-e2e/: pages.spec.ts
web/public/: coi-serviceworker.js
web/src/: App.tsx  aahd-tile-benchmark.ts  demosaic-benchmark-types.ts  demosaic-benchmark.ts  libraw-settings.json  libraw.d.ts  main.tsx  preview-correctness.ts  styles.css  types.ts  (+1 more)
(+175 files in other folders)
