[workspace]
members = ["crates/alchemy-core", "crates/alchemy-libraw", "crates/alchemy-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"
version = "0.1.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = 3
panic = "abort"
