[project]
name = "raw-alchemy-legacy-baseline"
version = "1.0.0"
requires-python = "==3.11.*"
dependencies = [
  "colour-science @ git+https://github.com/colour-science/colour.git@c167aa6f56e8fbad99cd12abf4d43bf36ea2b20b",
  "numba==0.62.1",
  "numpy==2.3.4",
  "rawpy @ git+https://github.com/shenmintao/rawpy.git@eb9ff0bd9a9aa4337c93cca9f660a2ebdf31a2e7",
  "scipy==1.16.3",
]

[tool.uv]
package = false
