[package]
name = "alchemy-cli"
description = "Native command-line surface for the RAW Alchemy core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "alchemy"
path = "src/main.rs"

[dependencies]
alchemy-core = { path = "../alchemy-core" }
alchemy-libraw = { path = "../alchemy-libraw" }
clap = { version = "4.5.50", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.23.0"
tiff = "0.10.3"
