[package]
name = "alchemy-libraw"
description = "Decoder pinned to Raw Alchemy's LibRaw source revision"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
links = "alchemy_libraw"
build = "build.rs"

[build-dependencies]
cc = { version = "1.2.46", features = ["parallel"] }
cmake = "0.1.54"
glob = "0.3.3"

[lints]
workspace = true
